--- a/Chromeduino Chrome App/manifest.json
+++ b/Chromeduino Chrome App/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Chromeduino 2",
+  "name": "Arduino Virus",
   "description": "Create Arduino-compatible sketches on your Chromebook",
   "version": "2.0.3",
   "manifest_version": 2,
